Web.config has been updated to RESTful Services settings.

--- a/Tweet.WCFService.RESTful/Web.config
+++ b/Tweet.WCFService.RESTful/Web.config
@@ -13,7 +13,7 @@
       <endpointBehaviors>
         <behavior 
           name="Tweet.WCFService.RESTful.TweetServiceAspNetAjaxBehavior">
-          <enableWebScript />
+          <webHttp />
         </behavior>
       </endpointBehaviors>
     </behaviors>
