--- a/Tweet.WCFService.RESTful/Tweet.WCFService.RESTful.csproj
+++ b/Tweet.WCFService.RESTful/Tweet.WCFService.RESTful.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="TweetBL">
+      <HintPath>..\TweetBL\bin\Debug\TweetBL.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
@@ -99,6 +102,7 @@
           <CustomServerUrl>
           </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
+          <EnableWcfTestClientForSVCDefaultValue>False</EnableWcfTestClientForSVCDefaultValue>
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
