Final Commit - Working Project!

--- a/Tweet.WCFService.RESTful/Web.config
+++ b/Tweet.WCFService.RESTful/Web.config
@@ -13,7 +13,7 @@
       <endpointBehaviors>
         <behavior 
           name="Tweet.WCFService.RESTful.TweetServiceAspNetAjaxBehavior">
-          <webHttp />
+          <webHttp automaticFormatSelectionEnabled="true"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
@@ -31,3 +31,4 @@
     </services>
   </system.serviceModel>
 </configuration>
+
