--- a/TweetClient/TweetClient.csproj
+++ b/TweetClient/TweetClient.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TweetService.cs" />
+    <Compile Include="Transports\DeleteTweet.cs" />
+    <Compile Include="Transports\Tweet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
